contador sin style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,22 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
+.bigCounter{
+    text-align: center;
+    background: black;
+}
+.bigCounter div{
+    display: inline-block;
+    font-size: 60px;
+    line-height: 60px;
+    background: #101010;
+    color: white;
+    padding: 10px;
+    margin: 3px;
+}
+h1{
+    justify-content: center;
+    margin-top: 20%;
+}
 /* 
 
     You can write your own styles here...
