--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,22 +1,20 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-.bigCounter{
-    text-align: center;
-    background: black;
+div{
+   background: black;   
+   margin: auto;
+   text-align: center;
+   color: white;
+   font-size: 90px; 
+   padding: 0;   
 }
-.bigCounter div{
-    display: inline-block;
-    font-size: 60px;
-    line-height: 60px;
-    background: #101010;
-    color: white;
-    padding: 10px;
-    margin: 3px;
+div.contador1{    
+    border: 2px solid gray;
+    border-radius: 25px;
+    width: 220px;
+    height: 155px;
 }
-h1{
-    justify-content: center;
-    margin-top: 20%;
-}
+
 /* 
 
     You can write your own styles here...
